<resources>+
    <string name="app_name">点餐宝</string>
    <string name="permission_reject_WRITE_EXTERNAL_STORAGE">存储权限不可用</string>
    <string name="permission_reject_ACCESS_FINE_LOCATION">定位权限不可用</string>
    <string name="permission_reject_READ_PHONE_STATE">状态权限不可用</string>
    <string name="request_WRITE_EXTERNAL_STORAGE">请在应用设置的权限管理中，允许应用使用存储权限</string>
    <string name="request_ACCESS_FINE_LOCATION">请在应用设置的权限管理中，允许应用使用定位权限</string>
    <string name="request_READ_PHONE_STATE">请在应用设置的权限管理中，允许应用使用手机状态读取权限</string>
    <string name="can_not_use_this_operation">当前权限不可用</string>
    <string name="permission_get_successful">权限获取成功</string>

    <string name="exception_error">数据读取失败，请检查网络连接是否正常</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="open_now">立即开启</string>
    <string name="error">出错啦</string>
    <string name="submit">提交</string>
    <string name="error_format">格式有误！</string>
    <string name="send_msg_again">重新发送</string>
    <string name="detail">详情</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_operation">操作成功！</string>
    <string name="no_storage_permission">没有存储权限</string>
    <string name="please_open_storage_permission">请允许应该访问存储</string>
    <string name="please_open_camera_permission">请允许应用访问相机</string>
    <string name="no_camera_permission">没有权限访问相机</string>
    <string name="no_permission">没有相关权限</string>
    <string name="please_open_permission">请授予相关权限</string>
    <string name="no_audio_permission">没有权限访问录音</string>
    <string name="no_location_permission">没有权限访问定位</string>
    <string name="please_open_audio_permission">请允许应用访问录音</string>
    <string name="please_open_location_permission">请允许应用访问位置服务</string>
    <string name="order_count">订餐：%d次</string>
    <string name="order_time">订餐时间：</string>
    <string name="order_amount">订餐金额：</string>
    <string name="price_low">%.2f起</string>
    <string name="connect_printer_failed">连接打印机失败</string>
    <string name="customer_label">客户：</string>
    <string name="remark_label">备注：</string>
    <string name="table_no">桌号：</string>
    <string name="order_subtotal">订单金额：</string>
    <string name="order_taxes">税：</string>
    <string name="order_tips">服务费：</string>
    <string name="order_total">总金额:</string>
    <string name="print_time">打印时间：</string>
    <string name="dinner_time">取餐时间：</string>
    <string name="table_no_label">桌号</string>
    <string name="dinner_time_label">取餐时间</string>
    <string name="please_input_name">请输入名称</string>
    <string name="please_input_price">请输入价格</string>
    <string name="produce_code_repeat">菜品编码重复</string>
    <string name="add_product">添加菜品</string>
    <string name="save_and_continue">保存并继续添加</string>
    <string name="cancel">取消</string>
    <string name="modify_product">修改菜品</string>
    <string name="save">保存</string>
    <string name="modify_sku">编辑规格</string>
    <string name="confirm">确定</string>
    <string name="add">添加</string>
    <string name="please_input_spec">请输入规格</string>
    <string name="modify_property">编辑属性</string>
    <string name="please_input_property">请输入属性名称</string>
    <string name="please_input_property_value">请输入属性值</string>
    <string name="input_customer_name">请输入客户姓名</string>
    <string name="input_customer_phone">请输入电话号码</string>
    <string name="input_table_number">请输入桌号</string>
    <string name="input_table_contains">请输入最大人数</string>
    <string name="input_emailaddress">请输入邮箱地址</string>
    <string name="modify_customer">编辑客户</string>
    <string name="confirm_delete_customer">确认要删除客户吗？相关的订单信息会被删除！</string>
    <string name="confirm_delete_table">确认要删除桌号及信息吗？</string>
    <string name="add_customer">添加客户</string>
    <string name="add_remark">添加备注</string>
    <string name="add_table">添加桌子</string>
    <string name="no_customer_info">未获取到客户信息</string>
    <string name="order_first">请先点菜</string>
    <string name="table_first">确定桌号</string>
    <string name="order_success">下单成功</string>
    <string name="default_sku">默认规格</string>
    <string name="default_property">默认属性</string>
    <string name="input_sender">请输入发送人</string>
    <string name="input_smtp">请输入SMTP服务器地址</string>
    <string name="input_smtp_port">请输入SMTP端口号</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="email_config">配置邮箱</string>
    <string name="table_config">配置桌子</string>
    <string name="input_shop_name">请输入店铺名称</string>
    <string name="input_tax_rate">请输入税率百分比</string>
    <string name="input_tip_rate">请输入服务费百分比</string>
    <string name="shop_config">店铺设置</string>
    <string name="input_printer_ip">请输入打印机Ip</string>
    <string name="input_printer_port">请输入连接端口号</string>
    <string name="printer_config">设置打印机</string>
    <string name="save_and_test">保存并测试</string>
    <string name="open_wifi">请先开启wifi并连接到局域网络</string>
    <string name="seek_printer">检测打印机</string>
    <string name="select_printer">选择打印机</string>
    <string name="no_printer_found">未检测到打印机</string>
    <string name="product_manager">菜品管理</string>
    <string name="heji">合计：</string>
    <string name="product_ordered">已点菜品：</string>
    <string name="print">打印</string>
    <string name="add_category">添加分类</string>
    <string name="add_table_adress">添加桌子位置</string>
    <string name="modify_category">修改分类</string>
    <string name="confirm_delete_category">确定删除分类吗，此分类下菜品都会被删除？</string>
    <string name="input_product_code">菜品编码</string>
    <string name="product_code">菜品编码</string>
    <string name="confirm_order">确认下单</string>
    <string name="end_call">挂机</string>
    <string name="category_name">分类名称</string>
    <string name="customer_name">客户姓名</string>
    <string name="phone_number">电话</string>
    <string name="emailaddress">邮箱</string>
    <string name="product_name">菜品名称</string>
    <string name="price">价格</string>
    <string name="product_tax_rate">税率（百分比）</string>
    <string name="please_input_tax_rate">请输入菜品税率</string>
    <string name="spec_name">规格名称</string>
    <string name="property_name">属性名称</string>
    <string name="property_value">属性值（以，分隔）</string>
    <string name="order_product">点餐</string>
    <string name="order_record">订单记录</string>
    <string name="call">打电话</string>
    <string name="shop_name">店铺名称</string>
    <string name="tips_rate">服务费（百分比）</string>
    <string name="shop_address">店铺地址</string>
    <string name="input_remark">请填写备注</string>
    <string name="printer_ip">打印机Ip</string>
    <string name="printer_port">连接端口</string>
    <string name="charsetname">字符集</string>
    <string name="sender">发送人</string>
    <string name="smtp_address">SMTP服务器</string>
    <string name="smtp_port">SMTP端口</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="usessl">使用SSL</string>
    <string name="default_sku_desc">默认规格（多个以\',\'分隔）</string>
    <string name="customer">客户</string>
    <string name="contact_record">通话记录</string>
    <string name="settings">设置</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="spec">规格</string>
    <string name="customer_name_label">客户姓名</string>
    <string name="unable_make_phone_call">Unable to make a phone call,please check the line!</string>
</resources>
