<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/emailaddress"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        app:met_baseColor="@color/edit_text_base_color"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="14sp"
        app:met_primaryColor="@color/edit_text_primary_color"
        app:met_textColorHint="@color/edit_text_hint_color"
        app:met_validateOnFocusLost="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/fromName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/sender"
        android:imeOptions="actionNext"
                android:singleLine="true"
        app:met_baseColor="@color/edit_text_base_color"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="14sp"
        app:met_primaryColor="@color/edit_text_primary_color"
        app:met_textColorHint="@color/edit_text_hint_color"
        app:met_validateOnFocusLost="true" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/smtpHostName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/smtp_address"
        android:inputType="textUri"
                android:imeOptions="actionNext"
                android:singleLine="true"
        app:met_baseColor="@color/edit_text_base_color"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="14sp"
        app:met_primaryColor="@color/edit_text_primary_color"
        app:met_textColorHint="@color/edit_text_hint_color"
        app:met_validateOnFocusLost="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/smtpHostPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/smtp_port"
        android:inputType="number"
                android:imeOptions="actionNext"
                android:singleLine="true"
        app:met_baseColor="@color/edit_text_base_color"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="14sp"
        app:met_primaryColor="@color/edit_text_primary_color"
        app:met_textColorHint="@color/edit_text_hint_color"
        app:met_validateOnFocusLost="true" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/username"
                android:imeOptions="actionNext"
                android:singleLine="true"
        app:met_baseColor="@color/edit_text_base_color"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="14sp"
        app:met_primaryColor="@color/edit_text_primary_color"
        app:met_textColorHint="@color/edit_text_hint_color"
        app:met_validateOnFocusLost="true" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/password"
                android:imeOptions="actionDone"
                android:singleLine="true"
        android:inputType="textPassword"
        app:met_baseColor="@color/edit_text_base_color"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="14sp"
        app:met_primaryColor="@color/edit_text_primary_color"
        app:met_textColorHint="@color/edit_text_hint_color"
        app:met_validateOnFocusLost="true" />
    <CheckBox
        android:id ="@+id/useSSL"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:text="@string/usessl"
        android:layout_height="wrap_content" />
</LinearLayout>