<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingRight="5dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_toLeftOf="@+id/order"
        android:text="张三"
        android:textColor="@color/black"
        android:textSize="16sp"
      />

    <TextView
        android:id="@+id/count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="订餐：5"
        android:layout_toLeftOf="@+id/order"
        android:textColor="@color/silver_agent"
        android:textSize="14sp"
        android:layout_below="@id/name"
      />
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_product"
        android:layout_marginRight="3dp"
        android:layout_toLeftOf="@+id/record"
        app:bootstrapBrand="success"
        android:layout_below="@id/name"
        app:buttonMode="regular"
        app:showOutline="true"
        app:roundedCorners="true"/>
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/record"
        android:layout_below="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_record"
        android:layout_marginRight="3dp"
        android:layout_toLeftOf="@+id/call"
        app:bootstrapBrand="warning"
        app:buttonMode="regular"
        app:showOutline="true"
        app:roundedCorners="true"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/call"
        android:layout_below="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        app:bootstrapBrand="warning"
        app:buttonMode="regular"
        android:layout_alignParentEnd="true"
        app:showOutline="true"
        app:roundedCorners="true"/>
</RelativeLayout>