<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="horizontal">




    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:padding="4dp"
        android:orientation="vertical"
        android:background="#E0E0E0"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/searchEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:met_clearButton="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="2"
                    android:hint="@string/input_product_code"
                    android:imeOptions="actionSearch"
                    android:inputType="number"
                    android:maxEms="3"
                    android:singleLine="true"
                    android:textSize="14sp"
                    app:met_baseColor="@color/edit_text_base_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="14sp"
                    app:met_primaryColor="@color/edit_text_primary_color"
                    app:met_textColorHint="@color/edit_text_hint_color" />
                <!--<com.rengwuxian.materialedittext.MaterialEditText-->
                    <!--android:id="@+id/tableNo"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
                    <!--android:layout_weight="1"-->
                    <!--android:hint="@string/table_no_label"-->
                    <!--android:imeOptions="actionDone"-->
                    <!--android:inputType="number"-->
                    <!--android:maxEms="5"-->
                    <!--android:singleLine="true"-->
                    <!--android:textSize="14sp"-->
                    <!--app:met_baseColor="@color/edit_text_base_color"-->
                    <!--app:met_floatingLabel="highlight"-->
                    <!--app:met_floatingLabelTextSize="14sp"-->
                    <!--app:met_primaryColor="@color/edit_text_primary_color"-->
                    <!--app:met_textColorHint="@color/edit_text_hint_color"-->
                    <!--app:met_validateOnFocusLost="true" />-->
                <!---->
                <Button
                    android:id="@+id/tableNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/table_no_label"
                    />


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/customerName"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:hint="@string/customer_name_label"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:met_baseColor="@color/edit_text_base_color"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextSize="14sp"
                    app:met_primaryColor="@color/edit_text_primary_color"
                    app:met_textColorHint="@color/edit_text_hint_color"
                    app:met_validateOnFocusLost="true" />

            </LinearLayout>



            <android.support.v7.widget.RecyclerView
                android:id="@+id/foodRecycleView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:text="@string/heji"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:paddingLeft="1dp"/>

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/dinnerTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/dinner_time_label"
                    app:bootstrapBrand="secondary"
                    app:buttonMode="regular"
                    app:roundedCorners="false"
                    app:showOutline="false" />

                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/remark"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/add_remark"
                    app:bootstrapBrand="secondary"
                    app:buttonMode="regular"
                    app:roundedCorners="false"
                    app:showOutline="false" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:padding="4dp"
        android:orientation="vertical"
        android:background="#E0E0E0"
        >


        <com.flyco.tablayout.SlidingTabLayout
            android:id="@+id/categoryTab"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#EFEFEF"
            app:tl_divider_color="#1A000000"
            app:tl_divider_padding="10dp"
            app:tl_divider_width="1dp"
            app:tl_indicator_color="#000000"
            app:tl_indicator_height="1.5dp"
            app:tl_indicator_width_equal_title="true"
            app:tl_tab_padding="12dp"
            app:tl_tab_space_equal="false"
            app:tl_textSelectColor="@color/colorAccent"
            app:tl_textUnselectColor="#66000000"
            app:tl_underline_color="#1A000000"
            app:tl_underline_height="0.8dp" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="1dp"
                android:layout_weight="2"
                android:text="@string/cancel"
                app:bootstrapBrand="warning"
                app:buttonMode="regular"
                app:roundedCorners="false"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="1dp"
                android:layout_weight="3"
                android:text="@string/confirm_order"
                app:bootstrapBrand="success"
                app:buttonMode="regular"
                app:roundedCorners="false"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/offhook"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="1dp"
                android:layout_weight="3"
                android:text="@string/end_call"
                app:bootstrapBrand="danger"
                app:buttonMode="regular"
                app:roundedCorners="false"
                app:showOutline="false" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

